public/stylesheets/boardpage.css
a {
    text-decoration: none;
}

body {
    font-family: 'Helvetica', 'Lucida Sans Regular';
    background-color: #0079BF;
    color: #FFF;
    height: 100%;
}

#logo {
    font-family: 'Brush Script MT', 'Helvetica', 'Lucida Sans Regular';
}

#user-menu {
    background-color: #EDEFF0;
    box-shadow: 0 0 6px rgba(0,0,0,.4);
    border-radius: 2px;
    color: #000;
    padding: 4px;
    top: 40px;
    text-align: center;
    position: fixed;
    display: none;
    width: 200px;
    right: 0;
}

.navbar {
    background-color: #0067A3;
    color: #FFF;
    height: 40px;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
}

.navbar-mid {
    font-weight: bold;
    font-size: 20px;
    position: absolute;
    left: 50%;
    top: -10px;
    transform: translateX(-50%);
}

.navbar-right {
    position: absolute;
    display: flex;
    right: 0;
    top: 0;
}

#boards-list {
    box-shadow: 0 0 6px rgba(0,0,0,.4);
    border-radius: 2px;
    color: #000;
    display: none;
    position: fixed;
    background-color: #FFF;
    min-width: 280px;
}

.navbar-btn:hover {
    filter: brightness(120%);
    cursor: pointer;
}

.boards-list-sep {
    margin: 10px 0 0 10px;
}

.boards-list-sep-name {
    font-size: .90rem;
    margin-bottom: 0;
}

.board-entry-list {
    margin-top: 2px;
}

.board-entry {
    background-color: #E0EFF7;   
    border-radius: 3px;
    height: 36px;
    margin: 5px;
    font-weight: bold;
    padding: 10px 20px;
}

.board-entry:hover {
    filter: brightness(95%);
    cursor: pointer;
}

.board-page {
    margin-top: 50px;
    height: 100%;
}

.board-name {
    display: inline-block;
    margin-left: 10px;
}

.board-toolbar {
    background-color: #0079BF;
    height: 55px;
    left: 0;
    position: fixed;
    top: 30px;
    width: 100%;
    z-index: 0;
}

.board-toolbar-right {
    position: absolute;
    right: 10px;
    top: 25px;
}

#board-menu {
    background-color: #EDEFF0;
    box-shadow: 0 0 6px rgba(0,0,0,.4);
    border-radius: 2px;
    color: #000;
    padding: 4px;
    position: fixed;
    width: 300px;
    bottom: 0;
    right: -320px;
    top: 40px;
    transition: 0.5s;
}

#board-member-add-menu {
    background-color: #FFF;
    box-shadow: 0 0 6px rgba(0,0,0,.4);
    border-radius: 2px;
    display: none;
    padding: 4px;
    position: absolute;
}

#add-label-menu {
    background-color: #FFF;
    box-shadow: 0 0 6px rgba(0,0,0,.4);
    border-radius: 2px;
    color: #000;
    display: none;
    padding: 4px;
    position: absolute;
    right: 0;
    width: 180px;
    min-height: 200px;
    z-index: 5;
}

.add-label-selector {
    border-radius: 3px;
    margin: 5px 2px;
    text-align: center;
    height: 20px;
    width: 175px;
}

.add-label-selector:hover {
    filter: brightness(110%);
    cursor: pointer;
}

#board-menu-btn {
    border-radius: 2px;
    height: 15px;
    font-size: 14px;
    padding: 5px;
    text-decoration: underline;
}

#board-menu-btn:hover {
    filter: brightness(80%);
    background-color: #0079BF;
}

.board-menu-section {
    border-bottom: 1px solid #CBCBCB;
    margin-bottom: 10px;
    padding-left: 10px;
}

.board-menu-title-text {
    display: inline-block;
    font-size: 1.2rem;
    font-weight: bold;
    margin-left: 125px;
    margin-top: 10px;
}

#board-menu-close-btn {
    color: #CBCBCB;
    position: absolute;
    right: 10px;
    margin-top: 10px;
}

#board-menu-close-btn:hover {
    color: #000;
    cursor: pointer;
}

.board-menu-option {
    background-color: #EDEFF0;
    border-radius: 2px;
    font-weight: bold;
    padding: 7px 10px;
}

.board-menu-option:hover {
    background-color: #CBCBCB;
}

.board-menu-activity, .card-activity {
    border-bottom: 1px solid #CBCBCB;
    padding: 3px;
    margin-bottom: 3px;
}

.board-menu-activity-time {
    margin: 3px;
    font-size: 13px;
}

ul {
    list-style-type: none;
    padding: 0;
}

#lol {
    margin-top: 40px;
    height: 100%;
    white-space: nowrap;
    position: fixed;
}

.navbar-btn {
    border-radius: 5px;
    background-color: #4791BD;
    color: #FFF;
    font-weight: bold;
    display: inline-block;
    height: 30px;
    vertical-align: middle;
    line-height: 30px;
    margin: 5px 3px;
    min-width: 20px;
    text-align: center;
    padding: 0 10px;
}

.btn {
    font-weight: bold;
    display: inline-block;
}

.card, .btn {
    background-color: #FFF;
    border-radius: 3px;
    box-shadow: 0 0 6px rgba(0,0,0,.4);
    margin: 5px;
    padding: 3px 8px;
}

.card:hover {
    background-color: #CBCBCB;
    cursor: pointer;
}

.btn:hover {
    background-color: #0079BF;
    color: #FFF;
    cursor: pointer;
}

.card-name {
    margin: 0;
}

.card-author {
    float: right;
}

#form-list-adder-container {
    display: none;
}

.list {
    background-color: #E2E4E6;
    border-radius: 5px;
    color: #000;
    display: inline-block;
    max-height: 85%;
    margin: 0 5px;
    overflow-x: hidden;
    padding: 5px;
    vertical-align: top;
    width: 200px;
    white-space: normal;
}

.edit-list-name-input {
    background-color: #E2E4E6;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-bottom: 2px solid #000;
    display: inline-block;
    margin: 20px 0 20px 0;
    max-height: 250px;
    width: 150px;
    font-family: 'Helvetica', 'Lucida Sans Regular';
    font-size: 1em;
    font-weight: bold;
}

#edit-card-desc-input {
    display: none;
    background-color: #EDEFF0;
    border-top: 2px solid #000;
    border-left: 0;
    border-right: 0;
    border-bottom: 2px solid #000;
    font-family: Helvetica;
    font-size: 1em;
}

#edit-card-desc-submit-btn {
    display: none;
    width: 55px;
}

#edit-card-name-input {
    background-color: #EDEFF0;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-bottom: 2px solid #000;
    display: block;
    font-size: 1.12em;
    font-weight: bold;
    margin-top: 17px;
}

#list-adder {
    display: inline-block;
}

#list-adder-submit-btn, #list-adder-close-btn {
    display: inline-block;
}

.list-topbar {
    margin: -15px 0;
}

.list-name {
    display: inline-block;
    max-height: 250px;
    overflow-y: auto;
    width: 150px;
}

#current-card-page-name:hover, .list-name:hover {
    filter: opacity(50%);
    cursor: pointer;
}

.list-delete-btn {
    margin-top: 20px;
    margin-right: 0;
    float: right;
}

.card-add-link {
    margin: 10px 3px 0;
}

.card-add-link:hover {
    background-color: #CBCBCB;
    text-decoration: underline;
    cursor: pointer;
}

.card-page {
    background-color: #EDEFF0;
    border-radius: 5px;
    color: #000;
    padding: 5px;
}

.flex-container {
    display: flex;
    flex-wrap: wrap;
}

#new-card-page {
    position: relative;
    margin: 60px auto;
    z-index: 3;
    min-height: 100px;
    width: 300px;
}

#current-card-page {
    position: relative;
    margin: 60px auto;
    z-index: 3;
    max-width: 600px;
    overflow-y: auto;
}

.modal {
    display: none;
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
}

.modal-bg {
    position: fixed;
    background-color: rgba(0,0,0,0.5);
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: 2;
}

.card-page-topbar-left {
    display: inline-block;
    width: 550px;
}

.card-page-topbar-right {
    position: absolute;
    top: 0;
    right: 0;
}

.card-section-name {
    font-weight: bold;
    margin: 20px 10px;
}

.card-label-surface-list {
    display: flex;
    flex-wrap: wrap;
}

.card-label {
    border-radius: 2px;
    display: inline-block;
    min-height: 30px;
    min-width: 40px;
    padding: 0 5px;
    vertical-align: middle;
    text-align: center;
    margin: 5px;
}

.card-label-surface {
    border-radius: 2px;
    display: inline-block;
    height: 8px;
    width: 38px;
    margin: 2px;
}

.card-label-text {
    display: block;
    margin: 5px auto;
    color: #FFF;
    font-weight: bold;
    text-shadow: 0 0 2px rgba(0,0,0,.4);
}

.card-label:hover {
    filter: brightness(150%);
    cursor: pointer;
}

.card-label-green {
    background-color: green;
}

.card-label-yellow {
    background-color: yellow;
}

.card-label-orange {
    background-color: orange;
}

.card-label-red {
    background-color: red;
}

.card-label-purple {
    background-color: purple;
}

.card-label-blue {
    background-color: blue;
}

.card-member {
    display: inline-block;
    background-color: #D6DADC;
    border-radius: 2px;
    padding: 2px 5px;
}

.card-member:hover {
    filter: brightness(95%);
    cursor: pointer;
}

.card-comment-username, .board-menu-activity-username, .board-menu-section-name {
    font-weight: bold;
    margin: 0;
}

.card-comment-content {
    background-color: #FFF;
    border-radius: 2px;
    box-shadow: 0 0 6px rgba(0,0,0,.4);
    display: inline-block;
    margin: 4px 5px;
    padding: 5px;
}

.card-info {
    width: 400px;
}

.card-options {
    width: 150px;
}

.div-clearer {
    clear: both;
}

